# blackmount-nlp-mcp

./: CLAUDE.md  CONTRIBUTING.md  README.md  llms-install.md  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  new_tool.yml
examples/: document_comparison.py  text_analysis.py
examples/configs/: cursor_mcp.json
src/blackmount_nlp_mcp/: __init__.py  _lexicon.py  _stopwords.py  clean.py  detect.py  keywords.py  readability.py  sentiment.py  server.py  similarity.py  summarize.py  tokenize.py
tests/: test_nlp.py
