[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackmount-nlp-mcp"
version = "0.1.3"
description = "Deterministic local text analysis MCP server — sentiment, readability, keywords, summarization. No NLTK, no spaCy, zero heavy deps."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mehrdad Shirangi"},
]
keywords = ["mcp", "mcp-server", "nlp", "text-analysis", "sentiment", "readability", "keyword-extraction", "summarization", "language-detection", "claude-desktop", "cursor-mcp", "local-nlp", "zero-dependencies", "deterministic", "text-scoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://blackmount.ai"
Repository = "https://github.com/BlackMount-ai/blackmount-nlp-mcp"
Issues = "https://github.com/BlackMount-ai/blackmount-nlp-mcp/issues"

[project.scripts]
blackmount-nlp-mcp = "blackmount_nlp_mcp.server:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "CROSS_REPO_TASKS.md",
    "CLAUDE.md",
    ".github/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blackmount_nlp_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
